build(Pubspec): Add common package as dependency to app

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
 
+
+  # Imported modules/packages
+  common:
+    path: common
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
