--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -6,5 +6,6 @@ linter:
   rules:
     avoid_classes_with_only_static_members: false
     sort_pub_dependencies: false
+    depend_on_referenced_packages: false
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
