--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,3 +60,11 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
+  fonts:
+    - family: Montserrat
+      fonts:
+      - asset: assets/fonts/Montserrat-Bold.ttf
+      - asset: assets/fonts/Montserrat-SemiBold.ttf
+      - asset: assets/fonts/Montserrat-Medium.ttf
