--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
 
+  hive: ^2.2.3
+
+  hive_flutter: ^1.1.0
+
+  path_provider: ^2.0.13
+
 
   # Imported modules/packages
   common:
@@ -65,6 +71,8 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.1
   lint: ^2.0.1
+  hive_generator: ^2.0.0
+  build_runner: any
 
 
 flutter:
