style: Resolve lint warnings
Resolve trailing commas and new line at EOF lint warning

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.combsoko.genba.platform_channels_challenge">
+    package="com.combsoko.genba.tmdb_clean_architecture">
    <application
-        android:label="platform_channels_challenge"
+        android:label="tmdb_clean_architecture"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
